# lvgl-ssd1327

./: CMakeLists.txt  LICENSE  README.md
src/: lv_conf.h  main.c
src/oled-lib/Config/: DEV_Config.h
src/oled-lib/OLED/: OLED_1in5.c  OLED_1in5.h
